hawaiianair.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "travel",
  "char_count": 3589,
  "classifier_probability": 0.84,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 13.19,
  "homepage_snapshot_redirected_domain": "hawaiianair.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020325061438id_/http://hawaiianair.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020325061438id_/http%3A//hawaiianair.com",
  "interval": "2002_A",
  "link_text": "PRIVACY POLICY",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "hawaiianair.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602143938id_/http%3A//hawaiianair.com/about/privacy.asp",
  "policy_title": "About Hawaiian Airlines, Wings of the Islands",
  "policy_url": "hawaiianair.com/about/privacy.asp",
  "sha1": "29fbf36e1989304623e436fd33f8847c584c04dd",
  "simhash": 17028560065845822160,
  "simhash_updated": false,
  "site_hostname": "hawaiianair.com",
  "site_url": "http://hawaiianair.com",
  "smog": NaN,
  "strict_updated": false,
  "timestamp": "20020602143938",
  "word_count": 582,
  "year": 2002
}

--- a/h/ha/haw/hawaiianair.com.html
+++ b/h/ha/haw/hawaiianair.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the hawaiianair.com privacy policy that was archived on 2001-12-18.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011218045251id_/http%3A//hawaiianair.com/about/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the hawaiianair.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602143938id_/http%3A//hawaiianair.com/about/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <title>About Hawaiian Airlines, Wings of the Islands</title>
@@ -7,13 +7,17 @@
 <meta name="keywords" content="Hawaiian Airlines, Wings of the Islands, air fares, tickets, Hawaii, Wings of the Islands, South Pacific, travel, non-stop, interisland, flights, coupons, charters, round trip, one way, TransPacific, Hawaiian Airlines, frequent flyers, mileage programs, direct flights, reservations, frequent flyer miles, special offers, HawaiianMiles, business travel, agents, travel planners, Hawaiian Airlines, frequent fliers, neighbor islands, corporate travel, island hopping, family vacations, business trips, destinations, Hawaiian Airlines, passengers, aircraft, jets, airplanes, first class, window seats, coach, aisle seating, fleet, cargo, baggage, luggage, Hawaiian Airlines, background information, founded, founding, established, air carrier, consumer affairs, customer service, customer advocate, employment, Hana Hou, in-flight magazines, Island Pass, movies, menus, meals, seat configuration, seating.">
 </head>
 <body bgcolor="#FFFFFF" link="#993399" vlink="#ff6600" alink="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
-<!-- BEGIN WEBSIDESTORY CODE v6.5 -->
-<!-- COPYRIGHT 1997-2001 WEBSIDESTORY, INC. ALL RIGHTS RESERVED. U.S.PATENT PENDING. Privacy notice at: http://websidestory.com/privacy -->
-<script language="javascript">
-var _pn="PUT+PAGE+NAME+HERE"; //page name(s)
-var _mlc="CONTENT+CATEGORY"; //multi-level content category
-var _cp="null"; //campaign
-var _acct="DM5106287MAM03EN3"; //account number(s)
+
+<!-- BEGIN WEBSIDESTORY NOVELL CODE v7.0 --> <!-- COPYRIGHT 1997-2001 WEBSIDESTORY, INC. ALL RIGHTS RESERVED. U.S.PATENT PENDING. Privacy notice at: http://websidestory.com/privacy --> <script language="javascript">
+var _pn="PUT+PAGE+NAME+HERE"; 	//page name(s)
+var _mlc="CONTENT+CATEGORY";	//multi-level content category
+var _seg=""; // visitor segmentation
+var _cmp=""; // campaign analysis - id
+var _gp="";  // campaign analysis - goal page 
+var _cmpn="hacmp";// campaign analysis - query name for id
+var _gpn=""; // campaign analysis - query name for goal page
+var _cp="null"; 	//campaign
+var _acct="DM5106287MAM03EN3"; 	//account number(s)
 var _pndef="title"; //default page name
 var _ctdef="full"; //default content category
 var _dlf="n"; //download filter
@@ -22,7 +26,7 @@ var _epg="n"; //event page identifier
 var _hcv=65; //code version
 var _mn="we41"; //machine name
 var _gn="ehg-hawaiianairlines.hitbox.com"; //gateway name
-var _lp=location.protocol.indexOf('https')==0?"https://":"http://";
+var _lp=location.protocol.indexOf('https')>-1?'https://':'http://';
 function _wn(_nm){if((_nm.indexOf("NAME")>0&&_nm.indexOf("PUT")>=0)||
 (_nm.indexOf("CONTENT")>=0&&_nm.indexOf("CATEGORY")>0))return true;return false;}
 function _gd(_x,_w){_ed = (_x.lastIndexOf("/"));
@@ -37,24 +41,21 @@ else{if (_wn(_pml)){if (_pndef=="title"){_pt=document.title; if (_pt!=""){_pml=_
 else{_pml=_gf(location.pathname);if (_pml==""){_pml=_pndef};}};}return _pml;}
 function _pm(_ml,_fml,_ipn){if (_ml.indexOf(";")!=-1){_nml=_ml.substring(0,(_ml.indexOf(";")));
 _rm=_ml.substring((_ml.indexOf(";")+1),_ml.length);_fml+=_ps(_ipn,_nml)+";";
-_gp=_pm(_rm,_fml,_ipn);return _gp;}else {_fml+=_ps(_ipn,_ml);return _fml;}}
+_fp=_pm(_rm,_fml,_ipn);return _fp;}else {_fml+=_ps(_ipn,_ml);return _fml;}}
 var _sv=10;var _bn=navigator.appName;if(_bn.substring(0,9)=="Microsoft"){_bn="MSIE";};
 var _bv=(Math.round(parseFloat(navigator.appVersion)*100));if((_bn=="MSIE")&&(parseInt(_bv)==2))_bv=301;
 var _rf=escape(document.referrer);_mlc=_pm(_mlc,"",false);_pn=_pm(_pn,"",true);
-</script><script language="javascript1.1" id="_hbc">_sv=11;</script>
-<script language="javascript1.1" defer="" src="/navs/hbe-hawaiianairlines.js"></script>
-<script language="javascript">if (_sv==10){if (document.cookie.indexOf("CP=")!=-1){_ce="y";}else{
-document.cookie="CP=null*; path=/; expires=Wed, 1 Jan 2020 00:00:00 GMT";
+</script><script language="javascript1.1" id="_hbc">if(!(_bn=='Netscape' && _bv<400&&_lp=='https://')){
+_sv=11;document.write('<scr'+'ipt language="javascript1.1" defer src="/navs/hbe-hawaiianairlines7.js"></scr'+
+'ipt>');}else{var _ct=_mlc;}</script><script language="javascript1.1" defer="" src="/navs/hbe-hawaiianairlines7.js"></script><script language="javascript">if (_sv==10){if(document.cookie.indexOf("CP=")!=-1){
+_ce="y";}else{document.cookie="CP=null*; path=/; expires=Wed, 1 Jan 2020 00:00:00 GMT";
 _ce=(document.cookie.indexOf("CP=")!=-1)?"y":"n";};if((_rf=="undefined")||(_rf=="")){_rf="bookmark";};
 _x2="<img src='"+_lp+_gn+"/HG?hc="+_mn+"&hb="+escape(_acct)+"&n="+escape(_pn);
-_x3="&cd=1&hv=6' border=0 height=1 width=1>";
+_x3="&cd=1&hv=6&seg="+_seg+"' border=0 height=1 width=1>";
 _ar="&bn="+escape(_bn)+"&bv="+_bv+"&ce="+_ce+"&ss=na&sc=na&dt=&sv="+_sv+"&con="+escape(_ct);
 _ar+="&vcon="+escape(_mlc)+"&epg="+_epg+"&hp=u&cy=u&ja=na&ln=na&cp="+escape(_cp)+"&pl=&rf="+_rf;
-document.write(_x2+_ar+_x3);} document.write("<\!--");</script><!--
-<noscript><img src="https://ehg-hawaiianairlines.hitbox.com/HG?hc=we41&cd=1&hv=6&ce=u&hb=DM5106287MAM03EN3&n=PUT+PAGE+NAME+HERE&vcon=CONTENT+CATEGORY" border='0' width='1' height='1'>
-</noscript><!--//-->
-<!-- END WEBSIDESTORY CODE -->
-<!--******BEGIN TOP NAVBAR******-->
+document.write(_x2+_ar+_x3);}document.write("<\!--");</script><!--
+<noscript><img src="http://ehg-hawaiianairlines.hitbox.com/HG?hc=we13&cd=1&hv=6&ce=u&hb=DM5106287MAM03EN3&n=PUT+PAGE+NAME+HERE&vcon=CONTENT+CATEGORY&seg=&cmp=&gp=" border='0' width='1' height='1'> </noscript><!--//--> <!-- END WEBSIDESTORY CODE  --><!--******BEGIN TOP NAVBAR******-->
 <table border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
 	<td valign="top" width="156" height="50" rowspan="2"><a href="/"><img src="/images/nav/logo_1.jpg" width="156" height="51" border="0"></a></td>
@@ -105,7 +106,7 @@ document.write(_x2+_ar+_x3);} document.write("<\!--");</script><!--
 <area shape="rect" coords="0,0,92,33" href="http://www.hawaiianair.com/bookaflight/reservation">
 </map>
 <map name="2nd_nav"><area shape="rect" coords="511,20,583,34" href="http://www.hawaiianair.com/bookaflight/schedules/sch_select_routemap.asp"><area shape="rect" coords="396,20,511,35" href="http://www.hawaiianair.com/about/services/"><area shape="rect" coords="339,17,396,35" href="http://www.hawaiianair.com/about/corporate/history.asp"><area shape="rect" coords="164,18,339,33" href="http://www.hawaiianair.com/about/corporate/factsheet.asp"><area shape="rect" coords="62,18,163,35" href="http://www.hawaiianair.com/about/corporate/newsrelease/"><area shape="rect" coords="430,2,584,18" href="http://www.hawaiianair.com/about/corporate/carriage.asp"><area shape="rect" coords="372,0,429,19" href="http://hawaiianair.custhelp.com/cgi-bin/hawaiianair.cfg/php/enduser/home.php"><area shape="rect" coords="280,1,372,17" href="http://www.hawaiianair.com/about/contact/"><area shape="rect" coords="61,0,280,18" href="http://www.hawaiianair.com/about/corporate/ata_policy.asp"></map>
-<!--******END TOP NAVBAR******-->
+<!--*** ***END TOP NAVBAR*** ***-->
  
 <table border="0" cellpadding="0" cellspacing="0" width="600">
   <tbody><tr> 
@@ -206,7 +207,7 @@ document.write(_x2+_ar+_x3);} document.write("<\!--");</script><!--
 <p> <!--******BEGIN BOTTOM NAVBAR******-->
 <table width="100%" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr>
-<td valign="top" width="146" bgcolor="9999CC"><img src="/images/nav/purp_spacer.gif" width="146" height="34"></td>
+<td valign="center" width="146" height="34" bgcolor="9999CC" align="center"><font color="#FFFFFF" size="1" face="Arial, Helvetica, sans-serif">© 2002 Hawaiian Airlines</font></td>
 <td width="440" valign="top" bgcolor="9999CC"><img src="/images/nav/foot_about.jpg" width="440" height="34" border="0" usemap="#foot_map"></td>
 <td valign="top" bgcolor="9999CC"><img src="/images/nav/purp_spacer.gif" width="100%" height="34"></td>
 </tr>
