--- a/a/ar/art/artchive.com.html
+++ b/a/ar/art/artchive.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the artchive.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212161121id_/http%3A//www.artchive.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the artchive.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602145058id_/http%3A//artchive.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>Mark Harden's Artchive: Privacy Policy</title>
 </head>
