newswire.ca (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business",
  "char_count": 1899,
  "classifier_probability": 0.88,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 12.35,
  "homepage_snapshot_redirected_domain": "newswire.ca",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020402152810id_/http://www1.newswire.ca/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402152810id_/http%3A//newswire.ca",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "newswire.ca",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602202116id_/http%3A//www1.newswire.ca/privacy.html",
  "policy_title": "CNW Resource Center",
  "policy_url": "www1.newswire.ca/privacy.html",
  "sha1": "ac0da002635eba3e273f8d4451c76114e616eed7",
  "simhash": 12320607935424954789,
  "simhash_updated": true,
  "site_hostname": "newswire.ca",
  "site_url": "http://newswire.ca",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602202116",
  "word_count": 278,
  "year": 2002
}

--- a/n/ne/new/newswire.ca.html
+++ b/n/ne/new/newswire.ca.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newswire.ca privacy policy that was archived on 2001-12-21.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011221152007id_/http%3A//www1.newswire.ca/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newswire.ca privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602202116id_/http%3A//www1.newswire.ca/privacy.html) for the most accurate reproduction.-->
 
 <html><head><title>CNW Resource Center</title></head>
 
@@ -11,17 +11,19 @@
 <td width="120" align="left" valign="top" rowspan="3">
 <font face="Arial,Helvetica,Universe" size="2" color="#FFFFFF">
 <a href="http://www.cnw.ca/commence.html"><img src="/images/buttons/bbar-french.gif" width="116" height="19" hspace="0" vspace="0" border="0"></a><br clear="all"><br>
-<a href="/services/index2.html"><img src="/images/buttons/bbar-aboutcnw2.gif" width="116" height="19" hspace="0" vspace="5" border="0"></a><br clear="all">CNW products<br>and services<br><br>
+<a href="/services/"><img src="/images/buttons/bbar-aboutcnw2.gif" width="116" height="19" hspace="0" vspace="5" border="0"></a><br clear="all">Corporate Info,<br>resources and<br>products &amp;<br>services<br><br>
 <a href="/cgi-bin/view.cgi?OKEY=12440"><img src="/images/buttons/bbar-daybook.gif" width="116" height="19" hspace="0" vspace="5" border="0"></a><br clear="all">Daily listing of<br>news events<br><br>
-<a href="http://www.ewatch.com"><img src="/images/buttons/bbar-ewatch.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Internet<br>monitoring<br>service<br><br>
+<a href="/services/ewatch/"><img src="/images/buttons/bbar-ewatch.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Internet<br>monitoring<br>service<br><br>
 <a href="/earnings/"><img src="/images/buttons/bbar-earnings.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Daily listing<br>of Canadian<br>earnings<br><br>
 <a href="http://reports.cnw.ca/"><img src="/images/buttons/bbar-reports2.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Free annual<br>report service<br><br>
-<a href="/services/newsdesk/"><img src="/images/bbar-newsdesk.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">High-tech,<br>healthcare,<br>entertainment and<br>transportation<br>news<br><br>
 <a href="/services/fhro/"><img src="/images/buttons/bbar-fhro.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Identify mutual<br>fund holdings for<br>publicly owned<br>companies<br><br>
 <a href="/epixlist.html"><img src="/images/buttons/bbar-epix2.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Electronic photo<br>archive<br><br>
-<a href="http://www.profnet.com" target="_new"><img src="/images/buttons/bbar-profnet2.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Find experts<br>online<br><br>
-<a href="/htmindex/commandnews.html"><img src="/images/buttons/bbar-command.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Monitor CP<br>and BN online<br><br>
-<!-- <A HREF="http://www.cna-acj.ca/nna/gala.asp?language=English"><IMG SRC="/images/bbar-nna.gif" WIDTH=116 HEIGHT=37 VSPACE=5 BORDER=0></A><BR><BR> -->
+<a href="/services/prnj/"><img src="/images/bbar-prnj.gif" width="116" height="41" vspace="5" border="0"></a><br clear="all">A customized<br>news network<br>for journalists<br><br>
+<a href="/services/profnet/"><img src="/images/buttons/bbar-profnet2.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Find experts<br>online<br><br>
+<a href="/services/commandnews.html"><img src="/images/buttons/bbar-command.gif" width="116" height="19" vspace="5" border="0"></a><br clear="all">Monitor CP<br>and BN online<br><br>
+<!--
+<A HREF="http://www.cna-acj.ca/nna/gala.asp?language=English"><IMG SRC="/images/bbar-nna.gif" WIDTH=116 HEIGHT=37 VSPACE=5 BORDER=0></A><BR><BR>
+-->
 </font></td>
 
 <td width="10" align="left" valign="top" rowspan="3"><img src="/images/buttons/onedot.gif" width="10" height="1"></td>
@@ -32,26 +34,27 @@
 
 <table cellspacing="0" cellpadding="0" border="0"><tbody><tr><td valign="top" align="left" width="95"><a href="/index.html"><img src="/images/buttons/smlogo.gif" height="50" width="75" border="0" vspace="0" hspace="0"></a></td><td valign="top" align="left"><font face="Arial, Helvetica"><font size="5"><b>Canada NewsWire</b></font><br><font size="3"><b>PRIVACY POLICY</b></font></font></td></tr></tbody></table>
 <hr>
-<br>
+<p>
 
 <font face="Arial, Helvetica">
 
-<p>
 Canada NewsWire does not share the individual information we gather on the Internet with third parties. The information we gather is helpful to us in the development of our service, but respect for our viewers and their privacy rights motivates us to closely guard and protect that information.
+</font></p><p><font face="Arial, Helvetica">
 
-</p><p>
 All personal information provided to us is securely stored on CNW servers. We use the information you provide in the following ways:
+</font></p><p><font face="Arial, Helvetica">
 
-</p><p>
-</p><ul>
+</font></p><ul><font face="Arial, Helvetica">
 <li>To give the developers of the site information that is useful in determining appropriate new features, content, and services.
 </li><li>To provide advertisers, partners and clients with aggregate – not individual – information about our user base. This is a key element in providing our service free of charge.
-</li></ul>
+</li></font></ul><font face="Arial, Helvetica">
+<p>
 
-<p>Information about individual users is not shared with any third party. Viewer's individual privacy rights out-weigh any other considerations in this regard. There are no exceptions to this policy.
-
+Information about individual users is not shared with any third party. Viewer's individual privacy rights out-weigh any other considerations in this regard. There are no exceptions to this policy.
 </p><p>
-If, during any of our registration processes, you indicated you would like to be kept updated on new site developments, or to receive further information from selected organizations, those updates will be sent to you by e-mail. If you decide at any time that you do not want to receive updates, just send an e-mail message to <a href="MailTo:cnw@newswire.ca">cnw@newswire.ca</a> indicating your preference not to receive updates and we will remove your name from the update list.<br><br><br>
+
+If, during any of our registration processes, you indicated you would like to be kept updated on new site developments, or to receive further information from selected organizations, those updates will be sent to you by e-mail. If you decide at any time that you do not want to receive updates, just send an e-mail message to <a href="MailTo:cnw@newswire.ca">cnw@newswire.ca</a> indicating your preference not to receive updates and we will remove your name from the update list.
+</p><p>
 
 
 <!-- standard footer -->
@@ -60,7 +63,7 @@ If, during any of our registration processes, you indicated you would like to be
 <p></p><hr size="2" noshade="">
 <p><a href="http://portfolio.newswire.ca"><img src="/images/ads/admove.gif" width="460" height="68" hspace="0" vspace="0" border="0"></a>
 </p><p><table width="400" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td width="400" colspan="2"><img src="/images/nav-top1.gif" width="400" height="20" border="0" hspace="0" vspace="0"></td></tr><tr><td width="71"><img src="/images/nav-left1.gif" width="71" height="45" border="0" hspace="0" vspace="0"></td><td width="329"><img src="/images/nav-right1.gif" width="329" height="45" border="0" hspace="0" vspace="0" usemap="#view1"></td></tr><tr><td width="400" colspan="2"><img src="/images/nav-top2.gif" width="400" height="19" border="0" hspace="0" vspace="0"></td></tr><tr><td width="71"><img src="/images/nav-left2.gif" width="71" height="45" border="0" hspace="0" vspace="0"></td><td width="329"><img src="/images/nav-right2.gif" width="329" height="45" border="0" hspace="0" vspace="0" usemap="#view2"></td></tr><tr><td width="400" colspan="2"><img src="/images/nav-top3.gif" width="400" height="19" border="0" hspace="0" vspace="0"></td></tr><tr><td width="71"><img src="/images/nav-left3.gif" width="71" height="28" border="0" hspace="0" vspace="0"></td><td width="329"><img src="/images/nav-right3.gif" width="329" height="28" border="0" hspace="0" vspace="0" usemap="#view3"></td></tr></tbody></table>
-</p><p><table width="460" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="left" valign="bottom"><a href="http://www.newswire.ca/"><img src="/images/buttons/smlogo.gif" border="0" hspace="0" vspace="0"></a></td><td align="middle" valign="bottom"><font face="Arial, Helvetica" size="2">General Inquiries - <a href="mailto:cnw@newswire.ca">cnw@newswire.ca</a><br>Technical Issues - <a href="mailto:webmaster@newswire.ca">webmaster@newswire.ca</a><br>© 2001 Canada NewsWire Ltd. <a href="/disclaim.html">All rights reserved.</a></font></td><td align="right" valign="bottom"><img src="/images/buttons/rt.gif"></td></tr></tbody></table></p></center>
+</p><p><table width="460" border="0" cellpadding="0" cellspacing="0"><tbody><tr><td align="left" valign="bottom"><a href="http://www.newswire.ca/"><img src="/images/buttons/smlogo.gif" border="0" hspace="0" vspace="0"></a></td><td align="middle" valign="bottom"><font face="Arial, Helvetica" size="2">General Inquiries - <a href="mailto:cnw@newswire.ca">cnw@newswire.ca</a><br>Technical Issues - <a href="mailto:webmaster@newswire.ca">webmaster@newswire.ca</a><br>© 2002 Canada NewsWire Ltd. <a href="/disclaim.html">All rights reserved.</a></font></td><td align="right" valign="bottom"><img src="/images/buttons/rt.gif"></td></tr></tbody></table></p></center>
 
 <!-- NAV -->
 <map name="view1">
