--- a/s/sa/saf/safetytechnology.com.html
+++ b/s/sa/saf/safetytechnology.com.html
@@ -1,14 +1,18 @@
-<!--The following is the downloaded HTML source of the safetytechnology.com privacy policy that was archived on 2001-03-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010330190923id_/http%3A//safetytechnology.com/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the safetytechnology.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602203132id_/http%3A//www.safetytechnology.com/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
-<title>Mace Muzzle canine repellent wholesale</title>
+<title>Safety Technology's Privacy Policy</title>
 <meta name="description" content="Mace Muzzle canine repellent">
 <meta name="keywords" content="mace, canine repellent, muzzle, dog protection">
 </head>
 <body bgcolor="#FFFFFF">
+<h2 align="center"><b><font face="Arial, Helvetica, sans-serif" color="#CC0000">Interested 
+              in selling our products on the Internet with your own web site, 
+              </font><font face="Arial, Helvetica, sans-serif"><a href="internetmarketing.htm"> 
+              CLICK HERE!</a></font></b></h2>
 <div align="left"> 
-  <table width="535" border="1" align="center" bgcolor="#EFE3C9" cellpadding="0">
+  <table width="600" border="1" align="center" bgcolor="#CCE6E6" cellpadding="0">
     <tbody><tr> 
       <td> 
         <table width="100%" border="0" cellspacing="0" cellpadding="1" align="center">
@@ -17,8 +21,8 @@
               <div align="center"><img src="Images/shield.jpg" width="97" height="125" align="top" alt="self defense, personal protection products"></div>
             </td>
             <td valign="middle" bgcolor="#FFFFFF"> 
-              <div align="center"> <a href="index.htm"><b>HOME PAGE</b></a><br>
-                <img src="Images/safetytech.gif" width="382" height="49" align="top" alt="wholesaler of stun guns, pepper sprays, hidden cameras"><br>
+              <div align="center"> <a href="index.htm"><b>BACK TO OUR HOME PAGE</b></a><br>
+                <img src="Images/title.jpg" width="382" height="49" align="top" alt="wholesaler of stun guns, pepper sprays, hidden cameras"><br>
                 <font color="#000000" face="Arial, Helvetica, sans-serif"><b>1867 
                 Caravan Trail #105, Jacksonville, FL 32216<br>
                 (800) 477-1739 (904) 720-2188 Fax (904) 720-0651<br>
@@ -70,7 +74,8 @@
       </td>
     </tr>
   </tbody></table>
-  </div>
+  <div align="center"><a href="index.htm"><b>BACK TO OUR HOME PAGE</b></a> </div>
+</div>
 
 
 </body></html>
