--- a/4/4w/4wo/4woman.gov.html
+++ b/4/4w/4wo/4woman.gov.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the 4woman.gov privacy policy that was archived on 2001-12-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011217221834id_/http%3A//4woman.gov/about/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the 4woman.gov privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602204021id_/http%3A//www.4woman.gov/about/privacy.htm) for the most accurate reproduction.-->
 
 <html><head>
 <title>NWHIC's Privacy Policy</title>
@@ -11,7 +11,7 @@
 
 <table border="0" cellpadding="0" cellspacing="0" width="100%" height="124">
   <tbody><tr>
-    <td width="125" valign="top" cellpadding="0" cellspacing="0" height="118" bgcolor="#ffffff"><a href="#border end"><img src="http://www.4woman.gov/_borders/images/clear.gif" alt="Skip Border" border="0" width="1" height="1"></a><a href="http://www.4woman.gov/index.htm"><img src="http://www.4woman.gov/_borders/images/1.gif" alt="The National Women's Health Information" border="0" width="124" height="116"></a></td>
+    <td width="126" valign="top" cellpadding="0" cellspacing="0" height="118" bgcolor="#ffffff"><a href="#border end"><img src="http://www.4woman.gov/_borders/images/clear.gif" alt="Skip Border" border="0" width="1" height="1"></a><a href="http://www.4woman.gov/index.htm"><img src="http://www.4woman.gov/_borders/images/1.gif" alt="The National Women's Health Information" border="0" width="124" height="116"></a></td>
     <td width="100%" valign="top" cellpadding="0" cellspacing="0" background="http://www.4woman.gov/_borders/images/3.gif" height="118">
 
 <map name="menumap">
