--- a/w/we/web/webmasterfree.com.html
+++ b/w/we/web/webmasterfree.com.html
@@ -1,126 +1,129 @@
-<!--The following is the downloaded HTML source of the webmasterfree.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201213508id_/http%3A//www.ientry.com/aboutus/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the webmasterfree.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602204149id_/http%3A//www.ientry.com/aboutus/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
-<title>[ ientry, inc. - about us / privacy policy ]</title>
+<title>iEntry Corporate | Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
-<link rel="stylesheet" href="../index.css" type="text/css">
+<meta name="title" content="">
+<meta name="description" content="">
+<meta name="keywords" content="">
+<meta name="classification" content="Web Programming">
+<meta http-equiv="content-language" content="en">
+<meta name="robots" content="all">
+<meta name="distribution" content="Global">
+<meta name="revisit-after" content="14 days">
+<meta name="rating" content="General">
+<meta name="author" content="iEntry Inc.">
+<meta name="reply-to" content="feedback@ientry.com">
+<meta name="copyright" content="2001 iEntry Inc.">
+<link rel="stylesheet" href="http://www.ientry.com/page/index.css" type="text/css">
 </head>
 
-<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0" background="../bg2.gif" link="#003366" vlink="#003366" alink="#003366">
-<!-- Fireworks 4.0  Dreamweaver 4.0 target.  Created Mon Jul 23 09:49:15 GMT-0400 (Eastern Daylight Time) 2001-->
-<table width="700" border="0" cellspacing="0" cellpadding="0" height="100%">
-  <tbody><tr>
-    <td align="center" valign="top" background="../images/dashedbg.gif"> 
-      <table width="700" border="0" cellspacing="0" cellpadding="0">
+<body bgcolor="#FFFFFF" text="#000000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0" height="68" background="http://images.ientrymail.com/ientrypage/topbg_f.gif">
   <tbody><tr> 
-    <td width="552" height="111"><img src="http://www.ientry.com/header/left.gif" width="552" height="111" usemap="#home" border="0"></td>
-    <td><img src="http://www.ientry.com/header/right_nav.gif" width="148" height="111" usemap="#ie_header" border="0"></td>
+    <td width="175" rowspan="2"><img src="http://images.ientrymail.com/ientrypage/tllogo.gif" width="175" height="68"></td>
+    <td width="99%" height="47" valign="middle" align="right"><a href="http://www.ientry.com/" class="navTop">HOME</a> 
+      / <a href="http://www.ientry.com/page/corp/" class="navTop">iEntry Corporate</a> 
+      / <a href="#" class="navTopB">Privacy Policy</a>&nbsp;</td>
+  </tr>
+  <tr>
+    <td height="21" width="99%" background="http://images.ientrymail.com/ientrypage/topbg.gif">&nbsp;</td>
   </tr>
 </tbody></table>
-<map name="ie_header">
-  <area shape="rect" coords="36,13,145,27" href="http://www.ientry.com/lists.html">
-  <area shape="rect" coords="51,31,146,45" href="http://www.ientry.com/advertising/index.html">
-  <area shape="rect" coords="75,49,145,60" href="http://www.ientry.com/aboutus/index.html">
-</map>
-<map name="home">
-  <area shape="rect" coords="333,63,382,77" href="http://www.ientry.com/">
-  <area shape="rect" coords="11,10,225,99" href="http://www.ientry.com/">
-</map><table width="700" border="0" cellspacing="0" cellpadding="0" background="../images/spacer.gif">
+<table border="0" cellspacing="0" cellpadding="0" background="http://images.ientrymail.com/ientrypage/trans.gif" height="100%">
+  <tbody><tr> 
+    <td width="175" background="http://images.ientrymail.com/ientrypage/lbg.gif" valign="top"> 
+      <table width="175" border="0" cellspacing="0" cellpadding="4" background="http://images.ientrymail.com/ientrypage/trans.gif">
         <tbody><tr> 
-          <td width="176" align="center" valign="top"> 
-            <table width="90%" border="0" cellspacing="0" cellpadding="4">
-              <tbody><tr> 
-                <td class="subText"><b>General Info</b><br>
-                  <a href="general.html">General About Us</a><br>
-                  <a href="contact.html">Contact Us</a><br>
-                  <a href="privacy.html">Privacy Policy</a><br>
-                  <a href="legal.html">Legal Notice</a><b><br>
-                  <br>
-                  Corporate Info</b><br>
-                  <a href="management.html">iEntry Management</a><br>
-                  <a href="develop.html">Business Development</a><br>
-                  <br>
-                  <b>Employment</b><br>
-                  <a href="benefits.html">Benefits</a><br>
-                  <a href="living.html">Lexington, Ky</a><br>
-                  <a href="jobs.html">Opportunities</a><br>
-                  <br>
-                  <b>Media Info</b><br>
-                  <a href="mediainfo.html">General Media Info</a></td>
-              </tr>
-            </tbody></table>
+          <td valign="top">
+            <script src="http://www.ientry.com/page/nav.js"></script>
           </td>
-          <td width="524" valign="top">
-            <p class="subTitle">/ientry/about.us/privacy-policy/<br>
-            </p>
-            <p class="subText"><b>THE IENTRY, INC. PRIVACY POLICY<br>
-              </b>Recognized by the industry for our commitment to safeguarding 
-              consumer privacy on our Web site, we operate under a strict set 
-              of privacy principles: <br>
-              <br>
-              The only information the iEntry Network obtains about individual 
+        </tr>
+      </tbody></table>
+    </td>
+    <td valign="top" width="846"> 
+      <table width="100%" border="0" cellspacing="0" cellpadding="4" background="http://images.ientrymail.com/ientrypage/trans.gif" height="50">
+        <tbody><tr> 
+          <td bgcolor="#003366" valign="top" width="80%"> <span class="pageTitle">» 
+            iEntry Corporate</span><br>
+            &nbsp;&nbsp;&nbsp; <a href="aboutus.html" class="pageLink">about us</a> 
+            / <a href="contactus.html" class="pageLink">contact us</a> / <a href="#" class="pageLink">privacy 
+            policy</a> / <a href="legal.html" class="pageLink">legal notice</a> 
+            / <a href="management.html" class="pageLink">management</a> / <a href="employment.html" class="pageLink">employment</a></td>
+          <td bgcolor="#003366" valign="top" width="20%" align="right"> <a href="javascript:history.back()" class="pageLink">‹ 
+            go back</a></td>
+        </tr>
+      </tbody></table>
+      <table width="75%" border="0" cellspacing="0" cellpadding="8">
+        <tbody><tr>
+          <td valign="top" class="contentText"><span class="contentTitle">The 
+            iEntry, Inc. Privacy Policy</span><br>
+            Recognized by the industry for our commitment to safeguarding consumer 
+            privacy on our Web site, we operate under a strict set of privacy 
+            principles: 
+            <p>The only information the iEntry Network obtains about individual 
               visitors to its Web site is information supplied voluntarily by 
               visitors.<br>
               <br>
               In cases when the iEntry Network may need personal information to 
               provide visitors with services tailored especially for them, or 
               to inform them about new features or services, visitors are asked 
-              explicitly for that information. <br>
-              <br>
-              All identifiable information provided by members (name, email or 
+              explicitly for that information. </p>
+            <p>All identifiable information provided by members (name, email or 
               home address) will not be disclosed to anyone unless members specifically 
-              request the iEntry Network to do so. <br>
-              <br>
-              Only statistical information of our members as a group (usage habits, 
+              request the iEntry Network to do so. </p>
+            <p>Only statistical information of our members as a group (usage habits, 
               demographics) may be shared with any partner of the iEntry Network; 
-              no identifiable information will be shared at any time. <br>
-              <br>
-              The iEntry Network employs strict security measures to safeguard 
+              no identifiable information will be shared at any time. </p>
+            <p>The iEntry Network employs strict security measures to safeguard 
               online transactions; personal information is stored in a secured 
               database and always sent via an encrypted Internet channel. </p>
-            <p class="subText"><b>Delete/DeActivate Policy</b><br>
+            <p><span class="contentTextB">Delete/DeActivate Policy</span><br>
               Users may unsubscribe to any of our electronic newsletters at any 
               time by following the instructions contained at the end of every 
               newsletter. While all efforts are made to insure this information 
-	      is viewable in all email browsers, there may be cases where certain email browsers do not display the unsubscribe information correctly.  In such cases	      
-              subscribers may also adjust their subscriber settings by logging into our Member Area at <a href="http://members.ientrymail.com">http://members.ientrymail.com</a>.  If you are having problems unsubscribing please forward the entire newsletter to abuse@ientry.com and you will be removed within 1 business day.
- 	      Please note that direct replies to any newsletter are processed by computer and are not viewed by a human.  To comment on a particular newsletter please use the comments@ address included in the newsletter.</p>
-            <p class="subText"><b>E-newsletter Privacy Policy</b><br>
+              is viewable in all email browsers, there may be cases where certain 
+              email browsers do not display the unsubscribe information correctly. 
+              In such cases subscribers may also adjust their subscriber settings 
+              by logging into our Member Area at <a href="http://members.ientrymail.com/" class="contentTextB">http://members.ientrymail.com</a>. 
+              If you are having problems unsubscribing please forward the entire 
+              newsletter to <a href="mailto:abuse@ientry.com" class="contentTextB">abuse@ientry.com</a> 
+              and you will be removed within 1 business day. Please note that 
+              direct replies to any newsletter are processed by computer and are 
+              not viewed by a human. To comment on a particular newsletter please 
+              use the comments@ address included in the newsletter.</p>
+            <p><span class="contentTextB">E-newsletter Privacy Policy</span><br>
               iEntry maintains a strict "no-spam" policy. Your information, 
-              including<br>
-              your e-mail address will not be given to any third party if you 
-              sign up<br>
-              for one of our newsletters. If you sign up for an e-mail newsletter 
-              at<br>
-              an iEntry site, you will receive the e-mail newsletter you have<br>
-              requested and our house newsletter eZined. eZined promotes our new<br>
-              newsletter offerings and you can unsubscribe from it at any time.</p>
-            <p class="subText"><b>Advertising</b><br>
+              including your e-mail address will not be given to any third party 
+              if you sign up for one of our newsletters. If you sign up for an 
+              e-mail newsletter at an iEntry site, you will receive the e-mail 
+              newsletter you have requested and our house newsletter eZined. eZined 
+              promotes our new newsletter offerings and you can unsubscribe from 
+              it at any time.</p>
+            <p><span class="contentTextB">Advertising</span><br>
               iEntry newsletters may contain 3rd party advertising. As part of 
-              your<br>
-              subscription, we may send out occasional special newsletter issues<br>
-              featuring one of our advertising partners. Such issues will generally<br>
-              feature some product or service that we believe will be of interest 
-              to<br>
-              our subscribers. Instructions for unsubscribing from these issues 
-              will<br>
-              be included with each mailing. You may decline from receiving these<br>
-              special mailings and still continue to receive our regular issues.</p>
-            <p class="subText"><b>Polling</b><br>
+              your subscription, we may send out occasional special newsletter 
+              issues featuring one of our advertising partners. Such issues will 
+              generally feature some product or service that we believe will be 
+              of interest to our subscribers. Instructions for unsubscribing from 
+              these issues will be included with each mailing. You may decline 
+              from receiving these special mailings and still continue to receive 
+              our regular issues.</p>
+            <p><span class="contentTextB">Polling</span><br>
               Several iEntry sites offer interactive polls to users so they can 
               easily share their opinions with other users and see what the iEntry 
               audience thinks about important issues. iEntry uses a system to 
               "tag" users after they have voted, so they can vote only 
               once on a particular question. This tag is not correlated with information 
               about individual users. </p>
-            <p class="subText"><b>Surveys</b><br>
+            <p><span class="contentTextB">Surveys</span><br>
               Occasionally, iEntry conducts user surveys to better target our 
               content to our audience. We sometimes share the aggregated demographic 
               information in these surveys with our advertisers and partners. 
               We never share any information about specific individuals with any 
               third party. </p>
-            <p class="subText"><b>Submission</b><br>
+            <p><span class="contentTextB">Submission</span><br>
               Our site submission guidelines are simple and straightforward. Multiple 
               submissions of the same site, site descriptions with embedded graphics 
               and/or javascript, pornographic site submissions and sites promoting 
@@ -130,38 +133,30 @@
               part to remove duplicate listings and consequently delays the posting 
               of legitimate submissions for a period of 4 to 5 weeks following 
               the date of submission.</p>
-            <p class="subText"><b>Tracking .Gif’s</b><br>
+            <p><span class="contentTextB">Tracking .Gif’s</span><br>
               iEntry Inc. and its advertisers may use tracking or single-pixel 
               gif images to count Web page accesses and gather some general statistical 
               information. iEntry Inc. does not gather personal information through 
               the use of these images. Some advertisers may use tracking gifs 
               that can track personal information from cookies that may have been 
-              previously placed on a user's computer.<br>
-              <br>
-              <b>Consent</b><br>
+              previously placed on a user's computer.</p>
+            <p><span class="contentTextB">Consent</span><br>
               By using our Web site, you consent to the collection and use of 
               information by iEntry Inc. as specified above. If we decide to change 
               our privacy policy, we will post those changes on this page so that 
               you are always aware of what information we collect, how we use 
-              it, and under what circumstances we disclose it. <br>
-            </p>
-            <p class="subText">For additional detail regarding iEntry's site submission 
-              guidelines, please visit our FAQ page.</p>
-            <p class="subText"><b>How to Reach Us</b><br>
+              it, and under what circumstances we disclose it. </p>
+            <p>For additional detail regarding iEntry's site submission guidelines, 
+              please visit our FAQ page.</p>
+            <p><span class="contentTextB">How to Reach Us</span><br>
               If you ever feel uncertain about whether this site is following 
               the privacy policy we have described here, please notify us by e-mail 
-              to <b><a href="mailto:abuse@ientry.com">abuse@ientry.com</a></b>. 
+              to <a href="mailto:abuse@ientry.com" class="contentTextB">abuse@ientry.com</a>. 
               We will make every reasonable effort to find and correct the problem 
-              promptly.<br>
-              <br>
-            </p>
-          </td>
+              promptly.</p>
+            </td>
         </tr>
       </tbody></table>
-      <map name="Map"> 
-        <area shape="rect" coords="1,0,207,18" href="#">
-        <area shape="rect" coords="250,1,442,16" href="#">
-      </map>
     </td>
   </tr>
 </tbody></table>
