craftsetc.com (archived on 2002-06-02)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "shopping",
  "char_count": 2293,
  "classifier_probability": 0.95,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "fairly_difficult",
  "flesch_kincaid": 9.93,
  "homepage_snapshot_redirected_domain": "craftsetc.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020331121542id_/http://www.craftsetc.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020331121542id_/http%3A//craftsetc.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "craftsetc.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020602222553id_/http%3A//www.craftsetc.com/privacy",
  "policy_title": "Crafts Etc! Privacy Policy",
  "policy_url": "craftsetc.com/privacy",
  "sha1": "df19aaea5eda2c562f74ccff83377ce0f6dac66e",
  "simhash": 4903004908298814453,
  "simhash_updated": true,
  "site_hostname": "craftsetc.com",
  "site_url": "http://craftsetc.com",
  "smog": NaN,
  "strict_updated": true,
  "timestamp": "20020602222553",
  "word_count": 377,
  "year": 2002
}

--- a/c/cr/cra/craftsetc.com.html
+++ b/c/cr/cra/craftsetc.com.html
@@ -1,42 +1,15 @@
-<!--The following is the downloaded HTML source of the craftsetc.com privacy policy that was archived on 2001-12-12.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011212002353id_/http%3A//www.craftsetc.com/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the craftsetc.com privacy policy that was archived on 2002-06-02.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020602222553id_/http%3A//www.craftsetc.com/privacy) for the most accurate reproduction.-->
 
 <html><head>
 <title>Crafts Etc! Privacy Policy</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 </head>
 <body bgcolor="#FFFFFF" link="#333399" vlink="#333399" alink="#333399" text="#333399">
+
 <table width="750" border="0" cellpadding="0" cellspacing="0">
-<tbody><tr> 
-    <td width="196"><a href="http://www.craftsetc.com"><img src="12a.gif" width="196" height="74" alt="CraftsEtc.com" border="0"></a></td>
-<td colspan="4" align="center" valign="bottom">
-<table border="0" cellpadding="0" cellspacing="0" width="425">
-<tbody><tr> 
-<td><img src="shim.gif" width="86" height="1" border="0"></td>
-<td><img src="shim.gif" width="84" height="1" border="0"></td>
-<td><img src="shim.gif" width="84" height="1" border="0"></td>
-<td><img src="shim.gif" width="86" height="1" border="0"></td>
-<td><img src="shim.gif" width="84" height="1" border="0"></td>
-<td><img src="shim.gif" width="1" height="1" border="0"></td>
-<td><img src="shim.gif" width="1" height="1" border="0"></td>
-</tr>
-<tr valign="top"> 
-<td colspan="6"><img src="12b.gif" width="425" height="58" border="0"></td>
-<td><img src="shim.gif" width="1" height="58" border="0"></td>
-</tr>
-<tr valign="top"> 
-<td><a href="http://www.craftsetc.com/community"><img name="snowingtabs_r2_c1" src="snowingtabs_r2_c1.gif" width="86" height="16" border="0" alt="Community"></a></td>
-<td><a href="http://www.craftsetc.com/projects"><img name="snowingtabs_r2_c2" src="snowingtabs_r2_c2.gif" width="84" height="16" border="0" alt="Projects"></a></td>
-<td><a href="http://www.craftsetc.com/ordering"><img name="snowingtabs_r2_c3" src="snowingtabs_r2_c3.gif" width="84" height="16" border="0" alt="Ordering"></a></td>
-<td><a href="http://www.craftsetc.com/contact"><img name="snowingtabs_r2_c4" src="snowingtabs_r2_c4.gif" width="86" height="16" border="0" alt="Contact Us"></a></td>
-<td><a href="http://www.craftsetc.com/faq"><img name="snowingtabs_r2_c5" src="snowingtabs_r2_c5.gif" width="84" height="16" border="0" alt="FAQ"></a></td>
-<td><img name="snowingtabs_r2_c6" src="snowingtabs_r2_c6.gif" width="1" height="16" border="0"></td>
-<td><img src="shim.gif" width="1" height="16" border="0"></td>
-</tr>
-</tbody></table>
-</td>
-<td width="19"><img src="12c.gif" width="116" height="72" alt="Crafts Etc!"></td>
-</tr>
+<tbody><tr><td width="196"><a href="http://www.craftsetc.com"><img src="http://www.craftsetc.com/headers/headera.gif" border="0" width="196" height="74"></a></td><td colspan="4" align="center" valign="bottom"><table border="0" cellpadding="0" cellspacing="0" width="425"><tbody><tr><td><img src="../shim.gif" width="86" height="1" border="0"></td><td><img src="../shim.gif" width="84" height="1" border="0"></td><td><img src="../shim.gif" width="84" height="1" border="0"></td><td><img src="shim.gif" width="86" height="1" border="0"></td><td><img src="../shim.gif" width="84" height="1" border="0"></td><td><img src="../shim.gif" width="1" height="1" border="0"></td><td><img src="../shim.gif" width="1" height="1" border="0"></td></tr><tr valign="top"><td colspan="6"><img src="http://www.craftsetc.com/headers/mayhead.gif" width="425" height="58"></td><td><img src="../shim.gif" width="1" height="58" border="0"></td></tr><tr valign="top"><td><a href="http://www.craftsetc.com/community"><img name="../snowingtabs_r2_c1" src="../snowingtabs_r2_c1.gif" width="86" height="16" border="0" alt="Community"></a></td><td><a href="http://www.craftsetc.com/projects"><img name="../snowingtabs_r2_c2" src="../snowingtabs_r2_c2.gif" width="84" height="16" border="0" alt="Projects"></a></td><td><a href="http://www.craftsetc.com/ordering"><img name="../snowingtabs_r2_c3" src="../snowingtabs_r2_c3.gif" width="84" height="16" border="0" alt="Ordering"></a></td><td><a href="http://www.craftsetc.com/contact"><img name="../snowingtabs_r2_c4" src="../snowingtabs_r2_c4.gif" width="86" height="16" border="0" alt="Contact Us"></a></td><td><a href="http://www.craftsetc.com/faq"><img name="../snowingtabs_r2_c5" src="../snowingtabs_r2_c5.gif" width="84" height="16" border="0" alt="FAQ"></a></td><td><img name="snowingtabs_r2_c6" src="snowingtabs_r2_c6.gif" width="1" height="16" border="0"></td><td><img src="../shim.gif" width="1" height="16" border="0"></td></tr></tbody></table></td><td width="19"><img src="http://www.craftsetc.com/headers/headerc.gif" width="116" height="72"></td></tr>
+
 </tbody></table>
 <table width="750" border="0" cellspacing="0" cellpadding="0">
 <tbody><tr> 
