--- a/u/us/usm/usmc.mil.html
+++ b/u/us/usm/usmc.mil.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the usmc.mil privacy policy that was archived on 2001-12-16.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011216200624id_/http%3A//www.usmc.mil/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the usmc.mil privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603065825id_/http%3A//www.usmc.mil/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN" "http://www.w3.org/TR/REC-html40/loose.dtd"><html><head>
 <title>United States Marine Corps</title>
@@ -7,8 +7,8 @@
 <meta http-equiv="Cache-Control" content="no-cache">
 <meta http-equiv="Pragma" content="no-cache">
 <meta http-equiv="expires" content="Wednesday, 10-Nov 75 10:10:30 GMT">
-<script language="JavaScript1.2" src="http://www.usmc.mil/HM_Loader.js" type="text/javascript"></script>
-        <script language="javascript" src="http://www.usmc.mil/marinelink/image1.nsf/ranimage.js" type="text/javascript"></script>
+<script language="JavaScript1.2" src="http://192.156.19.108/HM_Loader.js" type="text/javascript"></script>
+        
         <link rel="stylesheet" href="http://www.usmc.mil/templateml.nsf/css_view1.css"> 
 </head>
 <body topmargin="0" marginheight="0" marginwidth="0" vlink="#AA0000" link="#770000" alink="#ff0000">
