--- a/c/co/com/compuware.com.html
+++ b/c/co/com/compuware.com.html
@@ -1,7 +1,8 @@
-<!--The following is the downloaded HTML source of the compuware.com privacy policy that was archived on 2001-12-01.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011201025910id_/http%3A//www.compuware.com/corporate/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the compuware.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603070233id_/http%3A//www.compuware.com/corporate/privacy.htm) for the most accurate reproduction.-->
 
-<html><!-- #BeginTemplate "/Templates/levels.dwt" --><head>
+<html><!-- #BeginTemplate "/Templates/levels.dwt" --><head><script language="JavaScript" src="/foresee_trigger.js"></script>
+
 <!-- #BeginEditable "doctitle" --> 
 <title>Compuware Privacy Statement</title>
 <!-- #EndEditable --> 
@@ -15,7 +16,7 @@
 
 </head>
 
-<body bgcolor="#FFFFFF">
+<body bgcolor="#FFFFFF" onload="Poll(); return true;">
 <!----- CPWR LOGO and MAIN NAV -----> <!-- #BeginLibraryItem "/library/header_masthead.lbi" -->
 <!----- BEGIN MASTHEAD TABLE ----->
 <form name="seek1" method="GET" action="http://search.compuware.com/query.html">
@@ -124,9 +125,7 @@
   <tr> 
     <td class="subnav"><a href="/events/" class="subnav">Events</a></td>
   </tr>
-  <tr> 
-    <td class="subnav"><a href="/training/" class="subnav">Training</a></td>
-  </tr>
+ 
   <tr> 
     <td class="subnav"><a href="/corporate/offices/" class="subnav">Offices</a></td>
   </tr>
@@ -158,8 +157,7 @@
 
 
 
-</tbody></table>
-<!-- #EndLibraryItem --><!-- #EndEditable --><br>
+</tbody></table><!-- #EndLibraryItem --><!-- #EndEditable --><br>
       <br></td>
 
 <!----- SPACER COLUMN -----> 
@@ -326,8 +324,10 @@
 <!-- #BeginLibraryItem "/library/footer.lbi" --><table border="0" cellpadding="2" cellspacing="0" valign="top" width="100%">
 	<tbody><tr valign="top" bgcolor="#3366CC">
       <td class="footer"><center>
-        <a href="/corporate/legal.htm" class="footer">Copyright 2001</a> — All Rights Reserved | <a href="/corporate/privacy.htm" class="footer">Privacy</a> | <a href="/contact/" class="footer">Contact Us</a>
-</center></td>
+        <a href="/corporate/legal.htm" class="footer">Copyright 2002</a> — 
+        All Rights Reserved | <a href="/corporate/privacy.htm" class="footer">Privacy</a> 
+        | <a href="/contact/" class="footer">Contact Us</a> 
+      </center></td>
     </tr>
 	<tr valign="top">
 	    
