--- a/c/ce/cel/celebritywonder.com.html
+++ b/c/ce/cel/celebritywonder.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the celebritywonder.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211111748id_/http%3A//celebritywonder.com/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the celebritywonder.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603071404id_/http%3A//www.celebritywonder.com/privacy.html) for the most accurate reproduction.-->
 
 <html><head>
 	   <title>Privacy Policy</title>  
