wizardworld.com (archived on 2002-06-03)
{
  "alexa_rank": NaN,
  "analysis_subcorpus": true,
  "categories": "business;entertainment",
  "char_count": 13037,
  "classifier_probability": 0.96,
  "cross_domain_homepage_redir": false,
  "flesch_ease": "difficult",
  "flesch_kincaid": 14.28,
  "homepage_snapshot_redirected_domain": "wizardworld.com",
  "homepage_snapshot_redirected_url": "https://web.archive.org/web/20020402004605id_/http://www.wizardworld.com/",
  "homepage_snapshot_url": "https://web.archive.org/web/20020402004605id_/http%3A//wizardworld.com",
  "interval": "2002_A",
  "link_text": "Privacy Policy",
  "parked_domain": false,
  "phase": "A",
  "policy_domain": "wizardworld.com",
  "policy_filetype": "html",
  "policy_snapshot_url": "https://web.archive.org/web/20020603071533id_/http%3A//www.wizardworld.com/help/privacy.cfm",
  "policy_title": "WizardWorld.com Privacy Policy",
  "policy_url": "wizardworld.com/help/privacy.cfm",
  "sha1": "94f06f06d723793da2c0a52b35f8380f472fbe23",
  "simhash": 14647976416724910991,
  "simhash_updated": false,
  "site_hostname": "wizardworld.com",
  "site_url": "http://wizardworld.com",
  "smog": 13.87,
  "strict_updated": false,
  "timestamp": "20020603071533",
  "word_count": 2146,
  "year": 2002
}

--- a/w/wi/wiz/wizardworld.com.html
+++ b/w/wi/wiz/wizardworld.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the wizardworld.com privacy policy that was archived on 2001-12-14.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011214173545id_/http%3A//www.wizardworld.com/help/privacy.cfm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the wizardworld.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603071533id_/http%3A//www.wizardworld.com/help/privacy.cfm) for the most accurate reproduction.-->
 
 <html><head>
 	<title>WizardWorld.com Privacy Policy</title>
@@ -57,36 +57,6 @@
 <body leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
 
 <table width="775" cellspacing="0" cellpadding="0" border="0">
-<tbody><tr>
-	<td width="10"><img src="/graphics/spacer.gif" width="10" height="1"></td>
-	<td bgcolor="004AB5" width="765">
-<!-- Marquee Applet -->
-<applet code="ams.marquee.Ticker.class" codebase="http://www.wizardworld.com" width="765" height="15">
-	
-			
-		
-			<param name="file" value="/feed/base.txt">
-		
-	
-		<param name="net6" value="no">
-	
-	<param name="bgcolor" value="004AB5">
-	<param name="txtcolor" value="FFFFFF">
-	<param name="txtcolor2" value="FFFF01">
-	<param name="fonttype" value="Arial">
-	<param name="fontsize" value="10">
-	<param name="fontstyle" value="1">
-	<param name="delay_time" value="20">
-	
-	<param name="ver" value="1.0">
-	<param name="speed" value="1">
-	<param name="target_frame" value="_self">
-</applet>
-</td>
-</tr>
-</tbody></table>
-
-<table width="775" cellspacing="0" cellpadding="0" border="0">
 
 
 
@@ -109,7 +79,7 @@
 </tr>
 <tr>
 	<td width="20"><img src="/graphics/nav/datenub_left.gif" width="20" height="24" alt="" border="0"></td>
-	<td width="151" align="center" bgcolor="287DF8"><img src="graphics/spacer.gif" width="151" height="1"><br> <font face="arial, helvetica" size="2" color="ffffff" style="font-size:9pt;">December 14, 2001</font></td>
+	<td width="151" align="center" bgcolor="287DF8"><img src="graphics/spacer.gif" width="151" height="1"><br> <font face="arial, helvetica" size="2" color="ffffff" style="font-size:9pt;">June 03, 2002</font></td>
 	<td width="21"><img src="/graphics/nav/datenub_right.gif" width="21" height="24" alt="" border="0"></td>
 </tr>
 </tbody></table>
@@ -133,7 +103,7 @@
 	
 		<table border="0" cellspacing="0" cellpadding="0" align="center">
 		<tbody><tr>
-			<td><a href="http://www.wizardworld.com/community.cfm?comm=sport"><img src="/graphics/nav/bttn_i_sport_base.gif" width="46" height="34" alt="sports cards" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=comics"><img src="/graphics/nav/bttn_i_comics.gif" width="43" height="34" alt="comics" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=action"><img src="/graphics/nav/bttn_i_action.gif" width="46" height="34" alt="action figures" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=fantasy"><img src="/graphics/nav/bttn_i_fantasy.gif" width="48" height="34" alt="fantasy gaming" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=hot"><img src="/graphics/nav/bttn_i_hot_base.gif" width="44" height="34" alt="what's hot" border="0"></a></td>
+			<td><a href="http://www.wizardworld.com/community.cfm?comm=sport"><img src="/graphics/nav/bttn_i_sport_base.gif" width="46" height="34" alt="sports cards" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=comics"><img src="/graphics/nav/bttn_i_comics.gif" width="43" height="34" alt="comics" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=action"><img src="/graphics/nav/bttn_i_action.gif" width="46" height="34" alt="action figures" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"><a href="http://www.wizardworld.com/community.cfm?comm=fantasy"><img src="/graphics/nav/bttn_i_fantasy.gif" width="48" height="34" alt="fantasy gaming" border="0"></a><img src="/graphics/spacer.gif" width="3" height="1"></td>
 		</tr>
 		<tr>
 			<td><img src="/graphics/spacer.gif" width="1" height="8"></td>
@@ -150,7 +120,7 @@
 		<table width="292" border="0" cellspacing="0" cellpadding="0">
 		<tbody><tr>
 			<td>
-<form name="search" action="includes/srch_distribute.cfm" method="post">
+<form name="search" action="/includes/srch_distribute.cfm" method="post">
 <table width="292" border="0" cellspacing="0" cellpadding="0" height="54">
 
 
@@ -224,7 +194,7 @@
 
 <td><input type="text" name="txt" size="5" style="font-size:9pt;"></td>
 	<td><input type="image" name="go" src="/graphics/nav/search_go_bttn.gif" border="0" onclick="document.search.submit();"></td>
-	<td align="center"><font face="arial" size="2" style="font-size:8pt;line-height:10px;"><a href="../search_menu.cfm">advanced<br>
+	<td align="center"><font face="arial" size="2" style="font-size:8pt;line-height:10px;"><a href="/search_menu.cfm">advanced<br>
 search</a></font></td>
 
 </tr>
