--- a/m/mi/mid/midwiferytoday.com.html
+++ b/m/mi/mid/midwiferytoday.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the midwiferytoday.com privacy policy that was archived on 2001-12-05.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011205105101id_/http%3A//midwiferytoday.com/company/privacy.htm) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the midwiferytoday.com privacy policy that was archived on 2002-06-03.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020603072211id_/http%3A//midwiferytoday.com/company/privacy.htm) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><html><head>
 <title>Privacy Policy</title>
@@ -19,7 +19,7 @@
 <h1>Midwifery Today's Privacy Policy</h1>
 
 <h2>How to Contact Us</h2>
-<p>This website belongs to Midwifery Today, Inc.</p>
+<p>This Web site belongs to Midwifery Today, Inc.</p>
 <p>Our postal address is</p>
 <div class="indent">
 <table summary="Contact Address">
@@ -31,9 +31,9 @@ U.S.A.
 	</td></tr>
 </tbody></table>
 </div>
-<p>Our email address is</p>
+<p>Our e-mail address is</p>
 <div class="indent">
-<table summary="Email Address">
+<table summary="e-mail Address">
 	<tbody><tr><td><a href="mailto:admin@midwiferytoday.com">admin@midwiferytoday.com</a></td></tr>
 </tbody></table>
 </div>
@@ -48,8 +48,8 @@ U.S.A.
 
 <h2>General Information</h2>
 <p>When you visit our website, our Web server automatically recognizes only the domain name of your
-Internet service provider, and not your email address.
-However, we do collect your email address if you communicate with us via email.</p>
+Internet service provider, and not your e-mail address.
+However, we do collect your e-mail address if you communicate with us via e-mail.</p>
 <p>We also collect aggregate information on what pages people access or visit.
 This means we know how many people visited a specific page, but not who they are.</p>
 <p>We may also collect information that you voluntarily give us through online surveys,
@@ -58,37 +58,37 @@ advertiser entries in the Birth Market, on-site registrations, or other forms.</
 of our website, and for internal review.
 We may also use this information to contact you for various purposes.</p>
 
-<h2>Our Use of Email Addresses</h2>
+<h2>Our Use of e-mail Addresses</h2>
 <p>If you subscribe to Midwifery Today E-News
-or to other Midwifery Today email publications and/or email discussion lists,
-your email address will be used only for that purpose,
+or to other Midwifery Today e-mail publications and/or e-mail discussion lists,
+your e-mail address will be used only for that purpose,
 or to contact you personally in case a problem arises.
-Your email address will not be sold, rented or otherwise given out to third parties.</p>
-<p>Occasionally, subscribers to Midwifery Today email newsletters may receive special editions with information
+Your e-mail address will not be sold, rented or otherwise given out to third parties.</p>
+<p>Occasionally, subscribers to Midwifery Today e-mail newsletters may receive special editions with information
 about a birth-related product or service that Midwifery Today believes would be of interest to you.</p>
 
 <h2>Our Use of Other Contact Information</h2>
 <p><b>Postal Address</b>&nbsp;&nbsp;
-If you give us your postal address online or by email, phone, fax or postal mail,
+If you give us your postal address online or by e-mail, phone, fax or postal mail,
 this information will be entered into the Midwifery Today customer database.
 You may receive periodic mailings from us with information on new products and services or upcoming events.
-If you do not wish to receive such mailings, please let us know by contacting us by email, phone or letter,
+If you do not wish to receive such mailings, please let us know by contacting us by e-mail, phone or letter,
 using the contact information provided above.</p>
 <p>Your postal mailing address may be rented to companies that Midwifery Today believes offer a product or service of interest to you.
 If you do not want your postal address sold to third parties, please let us know at the time you place your order.
-Otherwise, you may request to have your name put on our do-not-share list by contacting us by email, phone or letter.
+Otherwise, you may request to have your name put on our do-not-share list by contacting us by e-mail, phone or letter.
 We will remove your name from the list we share with other organizations.</p>
 <p><b>Phone Number</b>&nbsp;&nbsp;
 We may use your phone number to contact you about orders you have placed.
 We also may phone you to let you know about a new product or service we are offering,
 to let you know about special offers, or to remind you that it's time to renew.
-If you do not wish to receive such phone calls, please let us know by contacting us by email, phone or letter.  Please provide us with your name and phone number.
+If you do not wish to receive such phone calls, please let us know by contacting us by e-mail, phone or letter.  Please provide us with your name and phone number.
 We will not sell or rent your phone number to third parties under any circumstances.</p>
 
 <h2>Our Use of Cookies</h2>
 <p>When you log in to our discussion forums at</p>
 <div class="indent">
-<table summary="Email Address">
+<table summary="e-mail Address">
 	<tbody><tr><td><a href="http://www.midwiferytoday.com/forums/">www.midwiferytoday.com/forums/</a></td></tr>
 </tbody></table>
 </div>
@@ -111,11 +111,11 @@ be used for specific purposes, this will be honored even if we change our polici
 if you've asked to be put on the "do not send postal mail" list, changes in our privacy policy will
 not affect your previous request.</p>
 <p>You may prevent your information from being used for purposes other than those for which it was
-originally collected by contacting us by email, phone or letter. At your request we will provide you
+originally collected by contacting us by e-mail, phone or letter. At your request we will provide you
 with access to all information (including proprietary information) that we maintain about you. We also
 offer you the ability to have inaccuracies corrected in contact information, financial information,
 unique identifiers, transaction information, and in communications that you have directed to our site.
-You may access this information and/or have this information corrected by contacting us by email,
+You may access this information and/or have this information corrected by contacting us by e-mail,
 phone or letter.</p>
 
 <h2>Problem Resolution</h2>
